[package]
name = "warp-example"
version = "0.1.0"
authors = ["Alexey Zabelin <hello@alexeyzabelin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["macros"] }
warp = "0.2.5"
serde = { version = "1.0.116", features = ["derive"] }
serde_derive = "1.0.116"
serde_json = "1.0.57"
thiserror = "1.0.20"
chrono = { version = "0.4.15", features = ["serde"] }
sqlx = { version = "0.3.5", default-features = false, features = ["runtime-tokio", "postgres", "macros", "chrono"] }
